--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -16,6 +16,7 @@
       },
       "args": [
         "watch",
+        "--no-hot-reload",
         "run",
         "${workspaceFolder}/MovieAppApi.csproj",
         "/property:GenerateFullPaths=true",
