--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,7 @@
+# Description .env file
+
+# Api key for The Movie Database
 TMDB_API_KEY=YOUR_API_KEY
+
+# Database connection string
+DATABASE_URL=YOUR_DATABASE_URL
